completing authentications
